<resources>
    <string name="app_name">SaveMyPet2</string>
    <string name="mis_mascotas">Mis Mascotas</string>
    <string name="boton_agregar">Agregar</string>
    <string name="boton_editar">boton editar</string>
    <string name="boton_notificaciones">boton notificaciones</string>
    <string name="boton_opciones">boton opciones</string>
    <string name="boton_perfil">boton perfil</string>
    <string name="email">Email</string>
    <string name="registrarse">Registrarse</string>
    <string name="telefono">Telefono</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="clave">Clave</string>
    <string name="registrarse_title">Registrarse</string>
    <string name="logo_registro">logo registro</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="iniciar_n_sesion">Iniciar\n Sesion</string>
    <string name="email_login">Email</string>
    <string name="clave_login">Clave</string>
    <string name="login_logo">login_logo</string>
    <string name="editar_mascota">Editar Mascota</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="editpet_logo">editpet_logo</string>
    <string name="especie">Especie</string>
    <string name="humedad">Humedad:</string>
    <string name="temperatura">Temperatura:</string>
    <string name="_27_c_normal">27°C Normal</string>
    <string name="estado">Estado:</string>
    <string name="_50_baja">50% Baja</string>
    <string name="despierto">Despierto</string>
    <string name="editar_perfil_2">Editar Perfil</string>
    <string name="guardar_cambios">Guardar cambios</string>
</resources>