<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerMascota">

    <TextView
        android:id="@+id/pet_estadotext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand"
        android:paddingStart="10dp"
        android:text="@string/despierto"
        android:textColor="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_humtext" />

    <TextView
        android:id="@+id/pet_humtext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand"
        android:paddingStart="10dp"
        android:text="@string/_50_baja"
        android:textColor="#FF3A3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_temptext" />

    <TextView
        android:id="@+id/pet_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/estado"
        android:textColor="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_humedad" />

    <TextView
        android:id="@+id/pet_temptext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/quicksand"
        android:paddingStart="10dp"
        android:text="@string/_27_c_normal"
        android:textColor="#3AFF44"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_especie" />

    <TextView
        android:id="@+id/pet_humedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/humedad"
        android:textColor="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_temp" />

    <TextView
        android:id="@+id/pet_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/temperatura"
        android:textColor="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_especie" />

    <TextView
        android:id="@+id/pet_especie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/especie"
        android:textColor="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_logo" />

    <ImageView
        android:id="@+id/pet_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/editpet_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_up"
        app:srcCompat="@drawable/pets" />

    <View
        android:id="@+id/menu_up"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombreMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/mis_mascotas"
        android:textColor="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider_up"
        app:layout_constraintEnd_toStartOf="@+id/menu_profile"
        app:layout_constraintStart_toEndOf="@+id/menu_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        tools:text="Nombre Mascota" />

    <ImageButton
        android:id="@+id/menu_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_perfil"
        android:onClick="irAPerfil"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_male_circle"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/menu_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_opciones"
        android:onClick="irAHome"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <View
        android:id="@+id/divider_up"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/menu_down"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider_down"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:contentDescription="@string/boton_agregar"
        android:focusable="true"
        app:backgroundTint="#FF7F3A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/plus_math"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/menu_notifications"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_notificaciones"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/jingle"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/menu_options"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_editar"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/configuraciones"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/pet_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/quicksand"
        android:text="Editar Mascota"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_estado" />

</androidx.constraintlayout.widget.ConstraintLayout>