<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarUsuario">

    <Button
        android:id="@+id/edit_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FF7F3A"
        android:fontFamily="@font/quicksand"
        android:text="@string/guardar_cambios"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck"
        tools:text="Guardar Cambios" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:backgroundTint="#FF7F3A"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/nombre_de_usuario"
        android:inputType="text"
        android:textColor="#FF7F3A"
        android:textColorHint="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_logo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:backgroundTint="#FF7F3A"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/telefono"
        android:inputType="number|phone"
        android:textColor="#FF7F3A"
        android:textColorHint="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_username"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:backgroundTint="#FF7F3A"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FF7F3A"
        android:textColorHint="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/menu_up"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombreMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/mis_mascotas"
        android:textColor="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider_up"
        app:layout_constraintStart_toEndOf="@+id/menu_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck"
        tools:text="Editar Perfil" />

    <ImageButton
        android:id="@+id/menu_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_opciones"
        android:onClick="iraPerfil"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <View
        android:id="@+id/divider_up"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/menu_down"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider_down"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="824dp"
        android:layout_marginBottom="34dp"
        android:clickable="true"
        android:contentDescription="@string/boton_agregar"
        android:focusable="true"
        app:backgroundTint="#FF7F3A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/divider_down"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus_math"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/menu_notifications"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_notificaciones"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/jingle"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/menu_options"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_editar"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/configuraciones"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/edit_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_up"
        app:srcCompat="@drawable/user_male_circle"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>