<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <View
        android:id="@+id/menu_up"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/mis_mascotas"
        android:textColor="#FF7F3A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider_up"
        app:layout_constraintEnd_toStartOf="@+id/menu_profile"
        app:layout_constraintStart_toEndOf="@+id/menu_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/menu_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_perfil"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_male_circle"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/menu_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_opciones"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <View
        android:id="@+id/divider_up"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/home_lista"
        android:layout_width="wrap_content"
        android:layout_height="639dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_up">

    </ListView>

    <View
        android:id="@+id/menu_down"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider_down"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="644dp"
        android:clickable="true"
        android:contentDescription="@string/boton_agregar"
        android:focusable="true"
        app:backgroundTint="#FF7F3A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/divider_down"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus_math"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/menu_notifications"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_notificaciones"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/jingle"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/menu_options"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_editar"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/menu"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>